--- a/WebUI/Views/ApartmentManagerPage/GetAllApartments.cshtml
+++ b/WebUI/Views/ApartmentManagerPage/GetAllApartments.cshtml
@@ -15,6 +15,7 @@
             <th scope="col">Oda Sayisi</th>
             <th scope="col">Kat Bilgisi</th>
             <th scope="col"></th>
+            <th scope="col"></th>
         </tr>
     </thead>
     <tbody>
