--- a/WebUI/Views/ApartmentManagerPage/GetAllUsers.cshtml
+++ b/WebUI/Views/ApartmentManagerPage/GetAllUsers.cshtml
@@ -23,28 +23,20 @@
 
             @foreach (var user in Model)
             {
-            <tr>
+                <tr>
 
-                <td>@user.Name @user.Surname</td>
-                <td>@user.PhoneNumber</td>
-                <td>@user.NumberPlate</td>
-                <td>@user.Address @user.Province</td>
-
-                @if (user != null && user.Apartment.Block.BlockName !=null)
-                {
-                    <span>
-                        @user.Apartment.Floor
-                    </span>
-                }
-
-
-                @*<td>@user.Apartment.Block.BlockName</td>*@
-                <td><a href="AddBill">Fatura Ekle</a></td>
-                <td><a href="DeleteUser">Kullaniciyi Sil</a></td>
-                <td><a href="UpdateUser">Kullaniciyi Duzenle</a></td>
-                @*<td><input type="button" value="Kullaniciyi Duzenle" href="/DeleteUser" /></td>
-        <td><input type="button" value="Kullaniciyi Sil" href="UpdateUser" /></td>*@
-            </tr>
+                    <td>@user.Name @user.Surname</td>
+                    <td>@user.PhoneNumber</td>
+                    <td>@user.NumberPlate</td>
+                    <td>@user.Address @user.Province</td>
+                    <td>@user.Apartment.ApartmentNumber</td>
+                    <td>@user.Apartment.Block.BlockName</td>
+                    <td><a href="AddBill">Fatura Ekle</a></td>
+                    <td><a href="DeleteUser">Kullaniciyi Sil</a></td>
+                    <td><a href="UpdateUser">Kullaniciyi Duzenle</a></td>
+                    <td><input type="button" value="Kullaniciyi Duzenle" href="/DeleteUser" /></td>
+                    <td><input type="button" value="Kullaniciyi Sil" href="UpdateUser" /></td>
+                </tr>
             }
         </tbody>
     </table>
